force-app/main/default/objects/MarketingAutomation__c/MarketingAutomation__c.object-meta.xml
<CustomObject>
    <description>Manages marketing automation workflows</description>
    <label>Marketing Automation</label>
    <pluralLabel>Marketing Automations</pluralLabel>
</CustomObject>