force-app/main/default/objects/MarketingAutomation__c/fields/AutomationName__c.field-meta.xml
<CustomField>
    <fullName>AutomationName__c</fullName>
    <label>Automation Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>