force-app/main/default/objects/MarketingAutomation__c/fields/TriggerEvent__c.field-meta.xml
<CustomField>
    <fullName>TriggerEvent__c</fullName>
    <label>Trigger Event</label>
    <length>100</length>
    <type>Text</type>
</CustomField>